force-app/main/default/objects/AG_Questionaire_Picklist_Value__c/AG_Questionaire_Picklist_Value__c.object-meta.xml
<CustomObject>
    <label>Questionaire Picklist Value</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Picklist Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionaire Picklist Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>