force-app/main/default/objects/AG_Questionaire_Picklist_Value__c/fields/AG_Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>AG_Assessment_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>AG_Assessment_Questions__c</referenceTo>
    <relationshipLabel>Questionaire Picklist Values</relationshipLabel>
    <relationshipName>Questionaire_Picklist_Values</relationshipName>
    <type>Lookup</type>
</CustomField>