force-app/main/default/objects/AG_Questionaire_Picklist_Value__c/fields/AG_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>AG_Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>