force-app/main/default/objects/AG_Questionaire_Picklist_Value__c/fields/AG_Score__c.field-meta.xml
<CustomField>
    <fullName>AG_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>